--- a/OOP/FishingBot.App/packages.config
+++ b/OOP/FishingBot.App/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="GlobalHotKey" version="1.1.0" targetFramework="net48" />
   <package id="InputSimulator" version="1.0.4.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection" version="8.0.1" targetFramework="net48" />
